--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ h2{
     font-style: normal;
   font-size: 48px;
   height: 110px;
-  --bs-btn-border-color: #000 ;
+  --bs-btn-border-color: #000  ;
   --bs-btn-border-width: 6px;
 }
 #btna{
@@ -60,13 +60,29 @@ h2{
     display: none;
     
 }
-.btn:hover {
+.btn:hover:not([disabled]) {
     color: var(--bs-btn-hover-color);
     background-color: var(--bs-btn-hover-bg);
     border-color: #ff9409;
+}
+.btn:disabled{
+    cursor:  no-drop !important;
 }
 .btn-check:checked+.btn, .btn.active, .btn.show, .btn:first-child:active, :not(.btn-check)+.btn:active {
     color: var(--bs-btn-active-color);
     background-color: var(--bs-btn-active-bg);
     border-color: #ff9409;
+}
+.correct{
+    border-color: #00FF0A !important;
+}
+.incorrect{
+    border-color: #FF0000 !important;
+}
+.btn.disabled, .btn:disabled, fieldset:disabled .btn {
+    color: var(--bs-btn-disabled-color);
+    pointer-events: none;
+    background-color: var(--bs-btn-disabled-bg);
+    border-color: black;
+    opacity: 100%;
 }
